# Image-Scraper

./: .gitignore  ImageHarvester.spec  README_DISTRIBUTION.md  install_driver.bat  pyproject.toml
src/: app.py  harvester.py  harvester2.py  test_link.xlsx
