[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "polars>=1.40.0",
    "xlsxwriter>=3.2.9",
]
